--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 <body>
   <div class="hero bg-dark text-center py-5">
     <h1 class="text-white">2024학년도 대학 입시 자료</h1>
+    <a href="https://hits.sh/github.com/silentsoft/hits/" style="float:right;"><img alt="Hits" src="https://hits.sh/github.com/silentsoft/hits.svg"
+/></a>
   </div>
   <div class="container">
     <div class="row">
