--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
   <h5 class="card-text">
     <p>- 이 자료는 2024학년도 대학 기본계획 검색기입니다.</p>
-    <p>- 서울 동양고등학교 김진혁 선생님이 만들었습니다.</p>
+    <p>- <span style="font-weight: bolder; color:rgb(4, 0, 255)"> 서울 동양고등학교 김진혁 선생님</span> 이 만들었습니다.</p>
     <p>- 사용에 문의가 있으시면 kimjh0630@naver.com 으로 연락바랍니다.</p>
   </h5>
 
