--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
           <div class="card-body">
             <h5 class="card-title">2023학년도 선행학습 영향평가 보고서</h5>
             <p class="card-text">2023학년도 선행학습 영향평가 보고서입니다.</p>
+            <p class="card-text">배명고등학교 채용석선생님께서 수집하신 자료입니다.</p>
             <a href="2023report.html" class="card-link stretched-link" ></a>
           </div>
         </div>
