--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
   </div>
 
   <h5 class="card-text">
+    <p>- 5월 수시요강이 발표되면 수시요강 검색기 업데이트를 진행합니다.</p>
+    <p>- 2023년, 2022년 수시입시 결과를 토대로 현재 본인 내신으로 지원 가능대학을 검색할 수 있는 검색기를 제작하려합니다.</p>
     <p>- 서울 동양고등학교 김진혁 선생님이 만들었습니다.</p>
     <p>- 사용에 문의가 있으시면 kimjh0630@naver.com 으로 연락바랍니다.</p>
   </h5>
