--- a/index.html
+++ b/index.html
@@ -54,6 +54,16 @@
             <h5 class="card-title">2023학년도 선행학습 영향평가 보고서</h5>
             <p class="card-text">2023학년도 선행학습 영향평가 보고서입니다.</p>
             <p class="card-text">배명고등학교 채용석선생님께서 수집하신 자료입니다.</p>
+            <a href="2025essential.html" class="card-link stretched-link" ></a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 mb-4">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">2025학년도 대학입학전형 기본계획</h5>
+            <p class="card-text">2025학년도 대학입학전형 기본계획입니다.</p>
+            <p class="card-text">최종 전형 계획 발표 전까지 사용하시기 바랍니다.</p>
             <a href="2023report.html" class="card-link stretched-link" ></a>
           </div>
         </div>
