--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <h5 class="card-title">2025학년도 대학입학전형 기본계획</h5>
             <p class="card-text">2025학년도 대학입학전형 기본계획입니다.</p>
             <p class="card-text">최종 전형 계획 발표 전까지 사용하시기 바랍니다.</p>
-            <a href="2023report.html" class="card-link stretched-link" ></a>
+            <a href="2025essential.html" class="card-link stretched-link" ></a>
           </div>
         </div>
       </div>
