--- a/index.html
+++ b/index.html
@@ -71,6 +71,16 @@
       <div class="col-md-4 mb-4">
         <div class="card">
           <div class="card-body">
+            <h5 class="card-title">2023 수시 면접 기출 자료</h5>
+            <p class="card-text">2023 수시 면접 자료</p>
+            <p class="card-text">대전대신고등학교(전민국, 하진수)에서 제작하였습니다.</p>
+            <a href="https://dshs.site/#/" class="card-link stretched-link" ></a>          
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 mb-4">
+        <div class="card">
+          <div class="card-body">
             <h5 class="card-title">2024학년도 수시모집요강</h5>
             <p class="card-text">2024학년도 수시모집요강</p>
             <p class="card-text">대학에서 발표시 업데이트 예정입니다.</p>
