--- a/2024s.html
+++ b/2024s.html
@@ -120,6 +120,7 @@ iframe {
             <p>- 2024학년도 수시 모집요강 검색기입니다.</p>
             <p>- 서울 동양고등학교 김진혁 선생님이 만들었습니다.</p>
             <p>- 사용에 문의가 있으시면 kimjh0630@naver.com으로 연락바랍니다.</p>
+            <p>- 어떠한 이유인지 모르겠지만 연세대학교가 검색되지 않습니다. <a href="/2024/연세대.PDF">연세대학교</a>와 <a href="/2024/연세대(미래).PDF"> 연세대학교(미래)</a>를 클릭하셔서 이용하세요.</p> 
             <p>- 검색되지 않는 학교가 있는 경우 신고를 눌러 알려주세요.<button id="searchButton2" onclick="window.location.href='https://padlet.com/kimjh0630/2024-51b7y3tjzffggcn2'">신고</button></p>
             
         </div>
