--- a/2023report.html
+++ b/2023report.html
@@ -117,7 +117,7 @@ iframe {
         <!-- 왼쪽 영역: 안내 메시지 -->
         <div class="left-side" id="leftSide">
             <p>- 이 자료는 2023학년도 선행학습 영향평가 보고서 검색기입니다.</p>
-            <p>- <span style="font-weight: bold; color:blue"> 배명고등학교 채용석 선생님</span>께서 수집하신 자료를 바탕으로 <span style="font-weight: bolder; color:rgb(4, 0, 255)"> 서울 동양고등학교 김진혁 선생님</span> 이 만들었습니다.</p>
+            <p>- <span style="font-weight: bolder; color:rgb(4, 0, 255)"> 서울 동양고등학교 김진혁 선생님</span> 이 만들었습니다.</p>
             <p>- 사용에 문의가 있으시면 kimjh0630@naver.com으로 연락바랍니다.</p>
             <p>- 검색되지 않는 학교가 있는 경우 신고를 눌러 알려주세요.<button id="searchButton2" onclick="window.location.href='https://padlet.com/kimjh0630/2024-51b7y3tjzffggcn2'">신고</button></p>
 
