--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           <div class="card-body">
             <h5 class="card-title">2024학년도 수시모집요강</h5>
             <p class="card-text">2024학년도 수시모집요강</p>
-            <p class="card-text">대학에서 발표시 업데이트 예정입니다.</p>
+            <p class="card-text">대학에서 발표한 최초 수시모집요강입니다.</p>
             <a href="2024s.html" class="card-link stretched-link" ></a>
           </div>
         </div>
