--- a/dy_AI.html
+++ b/dy_AI.html
@@ -125,7 +125,7 @@
     </h2>
     <h2 style="font-size: 28px; color: red">2. 코딩 및 AI 능력 향상</h2>
 
-    <a href="http://www.naver.com" target="_blank">
+    <a href="https://forms.gle/hG7MPMwd8dDFxjUM6" target="_blank">
       <div class="image-container">
         <img
           src="apply.png"
