--- a/dy_AI.html
+++ b/dy_AI.html
@@ -71,6 +71,10 @@
     </h2>
     <h2 style="font-size: 24px; color: blue">(우대) 코딩능력이 뛰어난 사람</h2>
 
+    <h1 style="font-size: 30px; color: rgb(174, 10, 250); text-align: center">
+      모이는 횟수 : 주 1회(월~금 중 하루 정해서 모임 실시)
+    </h1>
+
     <h1 style="font-size: 36px; color: red">
       열심히 참여시 본인이 얻을 수 있는 것
     </h1>
@@ -82,7 +86,7 @@
     <a href="https://forms.gle/hG7MPMwd8dDFxjUM6" target="_blank">
       <div class="image-container">
         <img
-          src="apply.png"
+          src="/2024univ.github.io-main/apply.png"
           alt="Apply"
           style="width: 700px; height: 200px"
         />
@@ -96,7 +100,7 @@
       1단계. 기존에 있는 키트를 이용해서 구현하기(신청자가 함께할 일)
     </h1>
     <div class="image-container">
-      <img src="jetbot.png" alt="Jetbot" />
+      <img src="/2024univ.github.io-main/jetbot.png" alt="Jetbot" />
     </div>
     <h2 style="font-size: 24px">
       위의 Jetbot을 이용해서 아래 내용을 구현 할 꺼에요.
@@ -128,7 +132,7 @@
     <a href="https://forms.gle/hG7MPMwd8dDFxjUM6" target="_blank">
       <div class="image-container">
         <img
-          src="apply.png"
+          src="/2024univ.github.io-main/apply.png"
           alt="Apply"
           style="width: 700px; height: 200px"
         />
