--- a/dy_AI.html
+++ b/dy_AI.html
@@ -86,9 +86,9 @@
     <a href="https://forms.gle/hG7MPMwd8dDFxjUM6" target="_blank">
       <div class="image-container">
         <img
-          src="/2024univ.github.io-main/apply.png"
+          src="apply.png"
           alt="Apply"
-          style="width: 700px; height: 200px"
+          style="width: 560px; height: 200px"
         />
       </div>
     </a>
@@ -100,7 +100,7 @@
       1단계. 기존에 있는 키트를 이용해서 구현하기(신청자가 함께할 일)
     </h1>
     <div class="image-container">
-      <img src="/2024univ.github.io-main/jetbot.png" alt="Jetbot" />
+      <img src="jetbot.png" alt="Jetbot" />
     </div>
     <h2 style="font-size: 24px">
       위의 Jetbot을 이용해서 아래 내용을 구현 할 꺼에요.
@@ -132,9 +132,9 @@
     <a href="https://forms.gle/hG7MPMwd8dDFxjUM6" target="_blank">
       <div class="image-container">
         <img
-          src="/2024univ.github.io-main/apply.png"
+          src="apply.png"
           alt="Apply"
-          style="width: 700px; height: 200px"
+          style="width: 560px; height: 200px"
         />
       </div>
     </a>
