--- a/index.html
+++ b/index.html
@@ -98,6 +98,17 @@
           </div>
         </div>
       </div>
+
+      <div class="col-md-4 mb-4">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">2024학년도 정시모집요강</h5>
+            <p class="card-text">2024학년도 정시모집요강</p>
+            <p class="card-text">지원 전 대학 홈페이지 최종 확인바랍니다.</p>
+            <a href="2024j.html" class="card-link stretched-link" ></a>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 
