--- a/2024j.html
+++ b/2024j.html
@@ -156,7 +156,7 @@ const search = async () => {
         resultsContainer.innerHTML = '';
 
         if (fileMatch) {
-            const pdfURL = `./2024/${fileMatch}`;
+            const pdfURL = `./2024j/${fileMatch}`;
             const pdfIframe = `<iframe src="${pdfURL}" width="100%" height="100%"></iframe>`;
             resultsContainer.innerHTML = pdfIframe;
             leftSide.style.display = 'none';
