--- a/univmap.html
+++ b/univmap.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>대학 위치 지도</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
-    <link rel="icon" href="./favicon.jpg"
+    <link rel="stylesheet" type="text/css" href="https://2024univ.github.io/style.css" />
+    <link rel="icon" href="https://2024univ.github.io/favicon.jpg"
   </head>
   <body>
     <div class="container">
@@ -44,7 +44,7 @@
       }
     </script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBqScdoBOkLUatgE9R46UBw_Pan5snhWPg&callback=initMap"></script>
-    <script src="script.js"></script>
+    <script src="https://2024univ.github.io/script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
   </body>
 </html>
