--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
     }
     
   </style>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4209273692027837"
+     crossorigin="anonymous"></script>
 </head>
 
 <body>
